# partisan_dislocation

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  dislocation_tutorial.ipynb  pyproject.toml  setup.py
2008_presidential_precinct_data/: 2008_presidential_precinct_counts.dbf  2008_presidential_precinct_counts.prj  2008_presidential_precinct_counts.shp  2008_presidential_precinct_counts.shp.xml  2008_presidential_precinct_counts.shx  US_cd114th_2014.dbf  US_cd114th_2014.sbn  US_cd114th_2014.shp  US_cd114th_2014.shp.xml  US_cd114th_2014.shx
data/: 2008_presidential_precinct_counts.dbf  2008_presidential_precinct_counts.prj  2008_presidential_precinct_counts.sbx  US_cd114th_2014.sbx
figure_10_csv/: Figure_10.csv
original_scripts/: 10_build_points.py  10_generate_ensembles.py  10_merge_points_to_shapes.py  dislocation_chain_utility.py
partisan_dislocation/: __init__.py  partisan_dislocation.py  test_partisan_dislocation.py  vs_experiment.py  vs_partisan_dislocation.ipynb  vs_partisan_dislocation.py
partisan_dislocation/tests/: test_partisan_dislocation.py
partisan_dislocation_pkg/: setup.py
partisan_dislocation_pkg/data/: 2008_presidential_precinct_counts.sbn  2008_presidential_precinct_counts.shp  2008_presidential_precinct_counts.shx
partisan_dislocation_pkg/partisan_dislocation/: __init__.py
partisan_dislocation_pkg/partisan_dislocation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_suite.py
