[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"



[tool.flit.metadata]
module = "partisan_dislocation"
author = "Deford, Eubank, and Rodden"
author-email = "nick@nickeubank.com"
home-page = "https://github.com/nickeubank/partisan_dislocation/"
requires = ["scipy >= 1.3",
            "geopandas >= 0.7"]
requires-python=">=3.7"
description-file="README.md"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
[tool.flit.sdist]
exclude = ["data"]
